tests/errors/operators/binary-op-not-found.fn
---
Description: Binary operator applied to a type with no matching operator
Expected: FN3213
---

type Vector2
{
    x: f32
    y: f32

    init(x: f32, y: f32)
    {
        this.x = x
        this.y = y
    }
}

type Program
{
    fn Main -> i32
    {
        var v = Vector2(1.0, 2.0)
        var x = v + v
        return 0
    }
}
